--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tachyons": "^4.10.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "gh-pages -d build",
