--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,5 @@ workflows:
       - build
       - hithere
       - test:
-        requires:
-          - hithere
-  
+        # requires:
+        #   - hithere
